translate and fix direction of contact.html

--- a/contact.html
+++ b/contact.html
@@ -295,18 +295,18 @@
     <!-- /HEADER -->
 
     <!-- CONTENT AREA -->
-    <div class="content-area">
+    <div class="content-area pkh-element-direction">
 
         <!-- BREADCRUMBS -->
         <section class="page-section breadcrumbs">
             <div class="container">
                 <div class="page-header">
-                    <h1>Contact</h1>
+                    <h1>تماس</h1>
                 </div>
                 <ul class="breadcrumb">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Shop</a></li>
-                    <li class="active">Contact Us</li>
+                    <li><a href="#">صفحه ی اصلی</a></li>
+                    <li><a href="#">فروشگاه</a></li>
+                    <li class="active">تماس باما</li>
                 </ul>
             </div>
         </section>
@@ -321,44 +321,45 @@
                     <div class="col-md-4">
                         <div class="contact-info">
 
-                            <h2 class="block-title"><span>Contact Us</span></h2>
-
+                            <h2 class="block-title"><span>تماس با ما</span></h2>
+                            <br/>
+                            <br/>
                             <div class="media-list">
                                 <div class="media">
-                                    <i class="pull-left fa fa-home"></i>
+                                    <i class="pull-right fa fa-home"></i>
                                     <div class="media-body">
-                                        <strong>Address:</strong><br>
-                                        987 Main st. New York, NY, 00001, U.S.A
+                                        <strong>آدرس:</strong><br>
+                                        همین دور ورا، یکم اون ور تر
                                     </div>
                                 </div>
                                 <div class="media">
-                                    <i class="pull-left fa fa-phone"></i>
+                                    <i class="pull-right fa fa-phone"></i>
                                     <div class="media-body">
-                                        <strong>Telephone:</strong><br>
-                                        (012) 345-7689
+                                        <strong>تلفن:</strong><br>
+                                        +98 936 254 6987
                                     </div>
                                 </div>
                                 <div class="media">
-                                    <i class="pull-left fa fa-envelope-o"></i>
+                                    <i class="pull-right fa fa-envelope-o"></i>
                                     <div class="media-body">
-                                        <strong>Fax:</strong><br>
+                                        <strong>فکس:</strong><br>
                                         0123456789
                                     </div>
                                 </div>
                                 <div class="media">
                                     <div class="media-body">
-                                        Phasellus pellentesque purus in massa aenean in pede phasellus libero ac tellus pellentesque semper.
+                                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. 
                                     </div>
                                 </div>
                                 <div class="media">
                                     <div class="media-body">
-                                        <strong>Customer Service:</strong><br>
+                                        <strong>خدمات مشتری:</strong><br>
                                         <a href="mailto:hello@bella.com">hello@bella.com</a>
                                     </div>
                                 </div>
                                 <div class="media">
                                     <div class="media-body">
-                                        <strong>Returns and Refunds:</strong><br>
+                                        <strong>بازده و بازپرداخت:</strong><br>
                                         <a href="mailto:hello@bella.com">hello@bella.com</a>
                                     </div>
                                 </div>
@@ -369,16 +370,16 @@
 
                     <div class="col-md-8 text-left">
 
-                        <h2 class="block-title"><span>Contact Form</span></h2>
+                        <h2 class="block-title"><span>فرم تماس</span></h2>
 
                         <!-- Contact form -->
                         <form name="contact-form" method="post" action="#" class="contact-form" id="contact-form">
 
                             <div class="outer required">
                                 <div class="form-group af-inner">
-                                    <label class="sr-only" for="name">Name</label>
+                                    <label class="sr-only" for="name">نام</label>
                                     <input
-                                            type="text" name="name" id="name" placeholder="Name" value="" size="30"
+                                            type="text" name="name" id="name" placeholder="نام" value="" size="30"
                                             data-toggle="tooltip" title="Name is required"
                                             class="form-control placeholder"/>
                                 </div>
@@ -386,9 +387,9 @@
 
                             <div class="outer required">
                                 <div class="form-group af-inner">
-                                    <label class="sr-only" for="email">Email</label>
+                                    <label class="sr-only" for="email">ایمیل</label>
                                     <input
-                                            type="text" name="email" id="email" placeholder="Email" value="" size="30"
+                                            type="text" name="email" id="email" placeholder="ایمیل" value="" size="30"
                                             data-toggle="tooltip" title="Email is required"
                                             class="form-control placeholder"/>
                                 </div>
@@ -396,25 +397,25 @@
 
                             <div class="outer required">
                                 <div class="form-group af-inner">
-                                    <label class="sr-only" for="subject">Subject</label>
+                                    <label class="sr-only" for="subject">موضوع</label>
                                     <input
-                                            type="text" name="subject" id="subject" placeholder="Subject" value="" size="30"
+                                            type="text" name="subject" id="subject" placeholder="موضوع" value="" size="30"
                                             data-toggle="tooltip" title="Subject is required"
                                             class="form-control placeholder"/>
                                 </div>
                             </div>
 
                             <div class="form-group af-inner">
-                                <label class="sr-only" for="input-message">Message</label>
+                                <label class="sr-only" for="input-message">پیام</label>
                                 <textarea
-                                        name="message" id="input-message" placeholder="Message" rows="4" cols="50"
+                                        name="message" id="input-message" placeholder="پیام ..." rows="4" cols="50"
                                         data-toggle="tooltip" title="Message is required"
                                         class="form-control placeholder"></textarea>
                             </div>
 
                             <div class="outer required">
                                 <div class="form-group af-inner">
-                                    <input type="submit" name="submit" class="form-button form-button-submit btn btn-theme btn-theme-dark" id="submit_btn" value="Send message" />
+                                    <input type="submit" name="submit" class="form-button form-button-submit btn btn-theme btn-theme-dark" id="submit_btn" value="فرستادن پیام" />
                                 </div>
                             </div>
 
