translate page login.html

--- a/login.html
+++ b/login.html
@@ -302,57 +302,57 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <h3 class="block-title"><span>Login</span></h3>
+                        <h3 class="block-title"><span>وارد شدن</span></h3>
                         <form action="#" class="form-login">
                             <div class="row">
                                 <div class="col-md-12 hello-text-wrap">
-                                    <span class="hello-text text-thin">Hello, welcome to your account</span>
+                                    <span class="hello-text text-thin">سلام, به اکانت خودتان خوش آمدید</span>
                                 </div>
                                 <div class="col-md-12 col-lg-6">
-                                    <a class="btn btn-theme btn-block btn-icon-left facebook" href="#"><i class="fa fa-facebook"></i>Sign in with Facebook</a>
+                                    <a class="btn btn-theme btn-block btn-icon-left facebook" href="#"><i class="fa fa-facebook"></i>facebook</a>
                                 </div>
                                 <div class="col-md-12 col-lg-6">
-                                    <a class="btn btn-theme btn-block btn-icon-left twitter" href="#"><i class="fa fa-twitter"></i>Sign in with Twitter</a>
+                                    <a class="btn btn-theme btn-block btn-icon-left twitter" href="#"><i class="fa fa-twitter"></i>twitter</a>
                                 </div>
                                 <div class="col-md-12">
-                                    <div class="form-group"><input class="form-control" type="text" placeholder="User name or email"></div>
+                                    <div class="form-group"><input class="form-control" type="text" placeholder="نام کاربری یا ایمیل"></div>
                                 </div>
                                 <div class="col-md-12">
-                                    <div class="form-group"><input class="form-control" type="password" placeholder="Your password"></div>
+                                    <div class="form-group"><input class="form-control" type="password" placeholder="رمز عبور"></div>
                                 </div>
                                 <div class="col-md-12 col-lg-6">
                                     <div class="checkbox">
-                                        <label><input type="checkbox"> Remember me</label>
+                                        <label><input type="checkbox"> مرا به خاطر بسپار</label>
                                     </div>
                                 </div>
                                 <div class="col-md-12 col-lg-6 text-right-lg">
-                                    <a class="forgot-password" href="#">forgot password?</a>
+                                    <a class="forgot-password" href="#">آیا پسوردتان را فراموش کرده اید؟</a>
                                 </div>
                                 <div class="col-md-6">
-                                    <a class="btn btn-theme btn-block btn-theme-dark" href="#">Login</a>
+                                    <a class="btn btn-theme btn-block btn-theme-dark" href="#">وارد شدن</a>
                                 </div>
                             </div>
                         </form>
                     </div>
                     <div class="col-sm-6">
-                        <h3 class="block-title"><span>Create New Account</span></h3>
+                        <h3 class="block-title"><span>ایجاد اکانت جدید</span></h3>
                         <form action="#" class="create-account">
                             <div class="row">
                                 <div class="col-md-12 hello-text-wrap">
-                                    <span class="hello-text text-thin">Create Your Account on Bellashop</span>
+                                    <span class="hello-text text-thin">ایجاد حساب برای شما در لورم ایپسوم</span>
                                 </div>
                                 <div class="col-md-12">
-                                    <h3 class="block-title">Signup Today and You'll be able to</h3>
+                                    <h3 class="block-title">اگر امروز ثبت نام کنید شما میتوانید:</h3>
                                     <ul class="list-check">
-                                        <li>Online Order Status</li>
-                                        <li>See Ready Hot Deals</li>
-                                        <li>Love List</li>
-                                        <li>Sign up to receive exclusive news and private sales</li>
-                                        <li>Quick Buy Stuffs</li>
+                                        <li>سفارش خود را به صورت آنلاین چک کنید</li>
+                                        <li>پیشنهادات داغ آماده را ببینید </li>
+                                        <li>لیست علاقه مندی ها</li>
+                                        <li>ثبت نام برای دریافت اخبار منحصر به فرد و فروش خصوصی</li>
+                                        <li>خرید سریع</li>
                                     </ul>
                                 </div>
                                 <div class="col-md-6">
-                                    <a class="btn btn-block btn-theme btn-theme-dark btn-create" href="#">Create Account</a>
+                                    <a class="btn btn-block btn-theme btn-theme-dark btn-create" href="#">ایجاد حساب</a>
                                 </div>
                             </div>
                         </form>
@@ -371,8 +371,8 @@
                             <div class="media">
                                 <div class="pull-right"><i class="fa fa-gift"></i></div>
                                 <div class="media-body">
-                                    <h4 class="media-heading">Buy 1 Get 1</h4>
-                                    Proin dictum elementum velit. Fusce euismod consequat ante.
+                                    <h4 class="media-heading">خرید 1 دریافت 1</h4>
+                                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت.
                                 </div>
                             </div>
                         </div>
@@ -382,8 +382,8 @@
                             <div class="media">
                                 <div class="pull-right"><i class="fa fa-comments"></i></div>
                                 <div class="media-body">
-                                    <h4 class="media-heading">Call to Free</h4>
-                                    Proin dictum elementum velit. Fusce euismod consequat ante.
+                                    <h4 class="media-heading">تماس رایگان</h4>
+                                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت.
                                 </div>
                             </div>
                         </div>
@@ -393,8 +393,8 @@
                             <div class="media">
                                 <div class="pull-right"><i class="fa fa-trophy"></i></div>
                                 <div class="media-body">
-                                    <h4 class="media-heading">Money Back!</h4>
-                                    Proin dictum elementum velit. Fusce euismod consequat ante.
+                                    <h4 class="media-heading">برگشت پول!</h4>
+                                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت.
                                 </div>
                             </div>
                         </div>
