--- a/error-page.html
+++ b/error-page.html
@@ -303,8 +303,8 @@
         <section class="page-section text-center error-page">
             <div class="container">
                 <h3>404</h3>
-                <h2><i class="fa fa-warning"></i> Oops! The Page you requested was not found!</h2>
-                <p><a class="btn btn-theme btn-theme-dark" href="index.html">Back to Home</a></p>
+                <h2><i class="fa fa-warning"></i>وای! صفحه مورد نظر شما یافت نشد!</h2>
+                <p><a class="btn btn-theme btn-theme-dark" href="index.html">برگشت به صفحه اصلی</a></p>
             </div>
         </section>
         <!-- /PAGE -->
@@ -312,7 +312,7 @@
         <!-- PAGE -->
         <section class="page-section">
             <div class="container">
-                <h2 class="section-title"><span>Brand &amp; Clients</span></h2>
+                <h2 class="section-title"><span>نام تجاری و مشتریان</span></h2>
                 <div class="partners-carousel">
                     <div class="owl-carousel" id="partners">
                         <div><a href="#"><img src="assets/img/preview/partners/brand-logo.jpg" alt=""/></a></div>
