translate page wishlist.html

--- a/wishlist.html
+++ b/wishlist.html
@@ -301,12 +301,12 @@
         <section class="page-section breadcrumbs">
             <div class="container">
                 <div class="page-header">
-                    <h1>Wishlist</h1>
+                    <h1>لیست علاقه مندی ها</h1>
                 </div>
                 <ul class="breadcrumb">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Shop</a></li>
-                    <li class="active">Shopping Cart</li>
+                    <li><a href="#">صفحه اصلی</a></li>
+                    <li><a href="#">فروشگاه</a></li>
+                    <li class="active">سبد خرید</li>
                 </ul>
             </div>
         </section>
@@ -321,9 +321,9 @@
                         <table class="table">
                             <thead>
                             <tr>
-                                <th>Image</th>
-                                <th>Product Name</th>
-                                <th>Unit Price</th>
+                                <th>تصویر</th>
+                                <th>نام محصول</th>
+                                <th>قیمت واحد</th>
                                 <th></th>
                                 <th></th>
                             </tr>
@@ -332,69 +332,69 @@
                             <tr>
                                 <td class="image"><a class="media-link" href="#"><i class="fa fa-plus"></i><img src="assets/img/preview/shop/order-1.jpg" alt=""/></a></td>
                                 <td class="description">
-                                    <h4><a href="#">Standard Product Name Header Here</a></h4>
-                                    by Category Name
+                                    <h4><a href="#">نام استاندارد محصول در اینجا</a></h4>
+                                    با نام دسته بندی 
                                 </td>
-                                <td class="price">$116.00</td>
-                                <td class="add"><a class="btn btn-theme btn-theme-dark btn-icon-left" href="#"><i class="fa fa-shopping-cart"></i> Add to cart</a></td>
+                                <td class="price">تومان116.00</td>
+                                <td class="add"><a class="btn btn-theme btn-theme-dark btn-icon-left" href="#"><i class="fa fa-shopping-cart"></i> افزودن به سبد خرید</a></td>
                                 <td class="total"><a href="#"><i class="fa fa-close"></i></a></td>
                             </tr>
                             <tr>
                                 <td class="image"><a class="media-link" href="#"><i class="fa fa-plus"></i><img src="assets/img/preview/shop/order-1.jpg" alt=""/></a></td>
                                 <td class="description">
-                                    <h4><a href="#">Standard Product Name Header Here</a></h4>
-                                    by Category Name
+                                    <h4><a href="#">نام استاندارد محصول در اینجا</a></h4>
+                                    با نام دسته بندی 
                                 </td>
-                                <td class="price">$116.00</td>
-                                <td class="add"><a class="btn btn-theme btn-theme-dark btn-icon-left" href="#"><i class="fa fa-shopping-cart"></i> Add to cart</a></td>
+                                <td class="price">تومان116.00</td>
+                                <td class="add"><a class="btn btn-theme btn-theme-dark btn-icon-left" href="#"><i class="fa fa-shopping-cart"></i> افزودن به سبد خرید</a></td>
                                 <td class="total"><a href="#"><i class="fa fa-close"></i></a></td>
                             </tr>
                             <tr>
                                 <td class="image"><a class="media-link" href="#"><i class="fa fa-plus"></i><img src="assets/img/preview/shop/order-1.jpg" alt=""/></a></td>
                                 <td class="description">
-                                    <h4><a href="#">Standard Product Name Header Here</a></h4>
-                                    by Category Name
+                                    <h4><a href="#">نام استاندارد محصول در اینجا</a></h4>
+                                    با نام دسته بندی 
                                 </td>
-                                <td class="price">$116.00</td>
-                                <td class="add"><a class="btn btn-theme btn-theme-dark btn-icon-left" href="#"><i class="fa fa-shopping-cart"></i> Add to cart</a></td>
+                                <td class="price">تومان116.00</td>
+                                <td class="add"><a class="btn btn-theme btn-theme-dark btn-icon-left" href="#"><i class="fa fa-shopping-cart"></i> افزودن به سبد خرید</a></td>
                                 <td class="total"><a href="#"><i class="fa fa-close"></i></a></td>
                             </tr>
                             </tbody>
                         </table>
-                        <a class="btn btn-theme btn-theme-transparent btn-icon-left btn-continue-shopping" href="#"><i class="fa fa-shopping-cart"></i>Continue shopping</a>
+                        <a class="btn btn-theme btn-theme-transparent btn-icon-left btn-continue-shopping" href="#"><i class="fa fa-shopping-cart"></i>ادامه خرید</a>
                     </div>
                     <div class="col-md-3">
-                        <h3 class="block-title"><span>Login</span></h3>
+                        <h3 class="block-title"><span>ورود</span></h3>
                         <form action="#" class="form-sign-in">
                             <div class="row">
                                 <div class="col-md-12 hello-text-wrap">
-                                    <span class="hello-text text-thin">Hello, welcome to your account</span>
+                                    <span class="hello-text text-thin">سلام,به حسابتان خوش آمدید</span>
                                 </div>
                                 <div class="col-md-12">
-                                    <a class="btn btn-theme btn-block btn-icon-left facebook" href="#"><i class="fa fa-facebook"></i>Sign in with Facebook</a>
+                                    <a class="btn btn-theme btn-block btn-icon-left facebook" href="#"><i class="fa fa-facebook"></i>با فیس بوک وارد شوید</a>
                                 </div>
                                 <div class="col-md-12">
-                                    <a class="btn btn-theme btn-block btn-icon-left twitter" href="#"><i class="fa fa-twitter"></i>Sign in with Twitter</a>
+                                    <a class="btn btn-theme btn-block btn-icon-left twitter" href="#"><i class="fa fa-twitter"></i>با توییتر وارد شوید</a>
                                 </div>
                                 <div class="col-md-12">
-                                    <div class="form-group"><input class="form-control" type="text" placeholder="User name or email"></div>
+                                    <div class="form-group"><input class="form-control" type="text" placeholder="نام کاربری یا آدرس ایمیل"></div>
                                 </div>
                                 <div class="col-md-12">
-                                    <div class="form-group"><input class="form-control" type="password" placeholder="Your password"></div>
+                                    <div class="form-group"><input class="form-control" type="password" placeholder="گذر واژه"></div>
                                 </div>
                                 <div class="col-md-12 col-lg-6">
                                     <div class="checkbox">
-                                        <label><input type="checkbox"> Remember me</label>
+                                        <label><input type="checkbox"> مرا به خاطر بسپار</label>
                                     </div>
                                 </div>
                                 <div class="col-md-12 col-lg-6 text-right-lg">
-                                    <a class="forgot-password" href="#">forgot password?</a>
+                                    <a class="forgot-password" href="#">رمز عبور را فراموش کرده اید؟</a>
                                 </div>
                                 <div class="col-md-12">
-                                    <a class="btn btn-theme btn-block btn-theme-dark" href="#">Login</a>
+                                    <a class="btn btn-theme btn-block btn-theme-dark" href="#">ورود</a>
                                 </div>
                                 <div class="col-md-12">
-                                    <a class="btn btn-theme btn-block btn-theme-transparent" href="#">Create account</a>
+                                    <a class="btn btn-theme btn-block btn-theme-transparent" href="#">ایجاد حساب کاربری</a>
                                 </div>
                             </div>
                         </form>
@@ -413,8 +413,8 @@
                             <div class="media">
                                 <div class="pull-right"><i class="fa fa-gift"></i></div>
                                 <div class="media-body">
-                                    <h4 class="media-heading">Buy 1 Get 1</h4>
-                                    Proin dictum elementum velit. Fusce euismod consequat ante.
+                                    <h4 class="media-heading">خرید 1 دریافت 1</h4>
+                                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت
                                 </div>
                             </div>
                         </div>
@@ -424,8 +424,8 @@
                             <div class="media">
                                 <div class="pull-right"><i class="fa fa-comments"></i></div>
                                 <div class="media-body">
-                                    <h4 class="media-heading">Call to Free</h4>
-                                    Proin dictum elementum velit. Fusce euismod consequat ante.
+                                    <h4 class="media-heading">تماس رایگان</h4>
+                                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت
                                 </div>
                             </div>
                         </div>
@@ -435,8 +435,8 @@
                             <div class="media">
                                 <div class="pull-right"><i class="fa fa-trophy"></i></div>
                                 <div class="media-body">
-                                    <h4 class="media-heading">Money Back!</h4>
-                                    Proin dictum elementum velit. Fusce euismod consequat ante.
+                                    <h4 class="media-heading">برگشت پول</h4>
+                                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت
                                 </div>
                             </div>
                         </div>
