fix page about.html

--- a/about.html
+++ b/about.html
@@ -392,11 +392,11 @@
         <!-- PAGE -->
         <section class="page-section">
             <div class="container">
-                <div class="row">
+                <div class="row" style="direction: rtl;">
                     <div class="col-md-4">
                         <div class="product-list">
-                            <a class="btn btn-theme btn-title-more" href="#">دیدن همه</a>
-                            <h4 class="block-title"><span>پرفروش ترین ها</span></h4>
+                            <a class="btn btn-theme btn-title-more" href="#" style="float:left;">دیدن همه</a>
+                            <h4 class="block-title"><span style="float:right;">پرفروش ترین ها</span></h4>
                             <div class="media">
                                 <a class="pull-left media-link" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-1.jpg" alt="">
@@ -452,8 +452,8 @@
                     </div>
                     <div class="col-md-4">
                         <div class="product-list">
-                            <a class="btn btn-theme btn-title-more" href="#">دیدن همه</a>
-                            <h4 class="block-title"><span>لوازم جانبی</span></h4>
+                            <a class="btn btn-theme btn-title-more" href="#"style="float:left;">دیدن همه</a>
+                            <h4 class="block-title"><span style="float:right;">لوازم جانبی</span></h4>
                             <div class="media">
                                 <a class="pull-left media-link" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-4.jpg" alt="">
@@ -509,8 +509,8 @@
                     </div>
                     <div class="col-md-4">
                         <div class="product-list">
-                            <a class="btn btn-theme btn-title-more" href="#">دیدن همه</a>
-                            <h4 class="block-title"><span>جدیدترین ها</span></h4>
+                            <a class="btn btn-theme btn-title-more" href="#" style="float:left;">دیدن همه</a>
+                            <h4 class="block-title"><span style="float:right;">جدیدترین ها</span></h4>
                             <div class="media">
                                 <a class="pull-left media-link" href="#">
                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-7.jpg" alt="">
