fix page category-right.html

--- a/category-right.html
+++ b/category-right.html
@@ -832,7 +832,7 @@
 
                         <!-- Pagination -->
                         <div class="pagination-wrapper">
-                            <ul class="pagination">
+                            <ul class="pagination" style="float:right">
                                 <li class="disabled"><a href="#"><i class="fa fa-angle-double-left"></i> قبلی</a></li>
                                 <li class="active"><a href="#">1 <span class="sr-only">(جاری)</span></a></li>
                                 <li><a href="#">2</a></li>
@@ -850,14 +850,14 @@
                         <!-- widget search -->
                         <div class="widget">
                             <div class="widget-search">
-                                <input class="form-control" type="text" placeholder="Search">
+                                <input class="form-control" type="text" placeholder="جستوجو" style="direction:rtl;">
                                 <button><i class="fa fa-search"></i></button>
                             </div>
                         </div>
                         <!-- /widget search -->
                         <!-- widget shop categories -->
-                        <div class="widget shop-categories">
-                            <h4 class="widget-title">دسته بندی</h4>
+                        <div class="widget shop-categories" style=" direction:rtl;">
+                            <h4 class="widget-title" style="padding-right:10px;">دسته بندی</h4>
                             <div class="widget-content">
                                 <ul>
                                     <li>
@@ -1022,7 +1022,7 @@
                         <!-- /widget shop categories -->
                         <!-- widget product color -->
                         <div class="widget widget-colors">
-                            <h4 class="widget-title">رنگ ها</h4>
+                            <h4 class="widget-title" style="padding-right:10px; direction:rtl">رنگ ها</h4>
                             <div class="widget-content">
                                 <ul>
                                     <li><a href="#"><span style="background-color: #ffffff"></span></a></li>
@@ -1040,11 +1040,11 @@
                         <!-- /widget product color -->
                         <!-- widget price filter -->
                         <div class="widget widget-filter-price">
-                            <h4 class="widget-title">قیمت</h4>
+                            <h4 class="widget-title" style="padding-right:10px; direction:rtl">قیمت</h4>
                             <div class="widget-content">
                                 <div id="slider-range"></div>
-                                <input type="text" id="amount" readonly />
-                                <button class="btn btn-theme">فیلتر کردن</button>
+                                <input type="text" id="amount" readonly style="float:left;"/>
+                                <button class="btn btn-theme" style="float:right;">فیلتر کردن</button>
                             </div>
                         </div>
                         <!-- /widget price filter -->
@@ -1116,7 +1116,7 @@
 
                                     <!-- tab 2 -->
                                     <div class="tab-pane fade in active" id="tab-s2">
-                                        <div class="product-list">
+                                        <div class="product-list" style="direction:rtl;">
                                             <div class="media">
                                                 <a class="pull-left media-link" href="#">
                                                     <img class="media-object" src="assets/img/preview/shop/top-sellers-4.jpg" alt="">
@@ -1234,8 +1234,8 @@
                         <!-- /widget tabs -->
                         <!-- widget tag cloud -->
                         <div class="widget widget-tag-cloud">
-                            <a class="btn btn-theme btn-title-more" href="#">دیدن همه</a>
-                            <h4 class="widget-title"><span>برچسب ها</span></h4>
+                            <a class="btn btn-theme btn-title-more" href="#" style="float: left;">دیدن همه</a>
+                            <h4 class="widget-title"><span style=" direction:rtl; float: right;">برچسب ها</span></h4>
                             <ul>
                                 <li><a href="#">لورم ایپسوم</a></li>
                                 <li><a href="#">لورم ایپسوم</a></li>
@@ -1253,8 +1253,8 @@
                         <!-- /widget tag cloud -->
                         <!-- widget products carousel -->
                         <div class="widget">
-                            <a class="btn btn-theme btn-title-more" href="#">دیدن همه</a>
-                            <h4 class="widget-title"><span>بهترین محصولات</span></h4>
+                            <a class="btn btn-theme btn-title-more" href="#" style="float: left;">دیدن همه</a>
+                            <h4 class="widget-title"><span style="direction:rtl; float: right;">بهترین محصولات</span></h4>
                             <div class="sidebar-products-carousel">
                                 <div class="owl-carousel" id="sidebar-products-carousel">
                                     <div class="thumbnail no-border no-padding">
@@ -1341,8 +1341,8 @@
                         <!-- /widget products carousel -->
                         <!-- widget shop hot deals -->
                         <div class="widget widget-shop-deals">
-                            <a class="btn btn-theme btn-title-more" href="#">دیدن همه</a>
-                            <h4 class="widget-title"><span>تخفیف های ویژه</span></h4>
+                            <a class="btn btn-theme btn-title-more" href="#" style="float:left;">دیدن همه</a>
+                            <h4 class="widget-title"><span style="direction:rtl; float: right;">تخفیف های ویژه</span></h4>
                             <div class="hot-deals-carousel">
                                 <div class="owl-carousel" id="hot-deals-carousel">
                                     <div class="thumbnail thumbnail-hot-deal no-border no-padding">
@@ -1439,7 +1439,7 @@
                                 <div class="pull-right"><i class="fa fa-gift"></i></div>
                                 <div class="media-body">
                                      <h4 class="media-heading">خرید 1 دریافت 1</h4>
-                                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت.
+                                    پسوم متن ساختگی با تولید سادگی نامفهوم از صنعت.
                                 </div>
                             </div>
                         </div>
@@ -1450,7 +1450,7 @@
                                 <div class="pull-right"><i class="fa fa-comments"></i></div>
                                 <div class="media-body">
                                     <h4 class="media-heading">تماس رایگان</h4>
-                                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت.
+                                    پسوم متن ساختگی با تولید سادگی نامفهوم از صنعت.
                                 </div>
                             </div>
                         </div>
@@ -1461,7 +1461,7 @@
                                 <div class="pull-right"><i class="fa fa-trophy"></i></div>
                                 <div class="media-body">
                                     <h4 class="media-heading">برگشت پول!</h4>
-                                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت.
+                                    پسوم متن ساختگی با تولید سادگی نامفهوم از صنعت.
                                 </div>
                             </div>
                         </div>
